# customnotes

./: .gitignore  README.md  notes.db
src/: bucketData.js  index.html  localData.js  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  notes.txt  tauri.conf.json
src-tauri/src/: local_operations.rs  main.rs  models.rs  s3_operations.rs  test_example.rs
