[package]
name = "custom_notes"
version = "0.0.1"
description = "A Custom Notes App"
authors = ["Olivier Blandin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.31.0"
lazy_static = "1.4.0"
aws-config = "1.2.1"
aws-sdk-s3 = "1.24.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.37"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
